Got Appium Working
Test is failing because it's performing some random assert from the original guide I was following. https://medium.com/@7ynk3r/react-native-e2e-testing-with-appium-on-sauce-labs-8920195b8a54

--- a/AwesomeProject/app.json
+++ b/AwesomeProject/app.json
@@ -23,7 +23,11 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "android": {
+      "package": "com.yourcompany.yourappname"
+    },
     "ios": {
+      "bundleIdentifier": "com.yourcompany.yourappname",
       "supportsTablet": true
     }
   }
