--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -9,7 +9,10 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "testMatch": [
+      "**/*.steps.js"
+    ]
   },
   "dependencies": {
     "expo": "^35.0.0",
@@ -23,6 +26,8 @@
     "appium-doctor": "^1.12.1",
     "babel-preset-expo": "^7.0.0",
     "chromedriver": "^77.0.0",
+    "cucumber": "^6.0.2",
+    "jest-cucumber": "^2.0.11",
     "jest-expo": "^35.0.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "wd": "^1.11.4"
