--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -27,6 +27,7 @@
     "babel-preset-expo": "^7.0.0",
     "chromedriver": "^77.0.0",
     "cucumber": "^6.0.2",
+    "jest": "^24.9.0",
     "jest-cucumber": "^2.0.11",
     "jest-expo": "^35.0.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
